--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,13 +4,33 @@
   margin-bottom: 10px;
 }
 
-.centerstage{
-  margin-left: auto;
-  margin-right: auto;
+.postdate{
+  text-align: center;
+}
+
+.posttitle{
+  font-family: 'Russo One', sans-serif;
+  font-size: 3em;
+  text-align: center;
+}
+
+.postcontent{
+  font-family: 'Montserrat';
+  font-size: 1.5em;
+}
+
+.btn-comment{
+  position: absolute;
+  right: 0px;
 }
 
 .bigbrand{
   font-size: 1.5em;
+}
+
+.centerstage{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*COLOR CHANGER*/
